--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 }
 
 [data-theme="dark"] {
-  --background-color: #0a0a0a;
+  --background-color: #111212;
   --foreground-color: #567aff;
   --primary-text-color: #f6f6f6;
   --secondary-text-color: #0a0a0a;
